# aq-lcd-grab

./: .gitignore  LICENSE-MIT
decoder/: Cargo.toml
decoder/src/: fnv.rs  lib.rs
docs/: decoder_design.md  display_notes.md  esp32_app_plan.md  firmware_stm32_design.md  host_design.md  pcb_spec.md  wire_protocol.md
firmware/: .gitignore  Cargo.toml  README.md  memory.x
firmware-esp32/: .gitignore  Cargo.toml  README.md  build.rs  partitions.csv  rust-toolchain.toml  secrets.env.example  sign_ota.sh
firmware-esp32/.cargo/: config.toml
firmware-esp32/src/: http.rs  lib.rs  logger.rs  mqtt.rs  pipeline.rs  reboot.rs
firmware-stm32/: .gitignore  Cargo.toml  README.md  TODO.md
firmware-stm32/.cargo/: config.toml
firmware-stm32/scripts/: flash-uart.sh
firmware-stm32/src/: capture.rs  main.rs  uart.rs  wire.rs
firmware/.cargo/: config.toml
firmware/scripts/: flash.sh
firmware/src/: decoder.rs  main.rs  picotool_reset.rs  pio_capture.rs  proto.rs  wire.rs
firmware/udev/: 71-aq-lcd-grab.rules
framebuffer/: Cargo.toml
framebuffer/src/: lib.rs  palette.rs
host/: .gitignore  Cargo.toml  README.md  build.rs
host/src/: bus_decoder.rs  decoder.rs  framebuffer.rs  main.rs  parser.rs  permute.rs  sample.rs  wire.rs
pcb/: aq_lcd_grab.kicad_pcb  aq_lcd_grab.kicad_pro  aq_lcd_grab.kicad_sch  aq_lcd_grab.net  aq_lcd_grab.py  aq_lcd_grab_sklib.py  fp-lib-table  route_lcd_bus.py  straighten_traces.py  sym-lib-table
pcb/esp32c6.pretty/: XIAO-ESP32-C6-DIP.kicad_mod
pcb/logo.pretty/: logo-1cm.kicad_mod  logo-2cm.kicad_mod  logo-8mm.kicad_mod  logo.kicad_mod
pcb/test_points.pretty/: TestPoint_Pad_0.5x0.5mm.kicad_mod
wire/: Cargo.toml
wire/src/: decoder.rs  encoder.rs  lib.rs  permute.rs  sink.rs
