[package]
name = "aq-lcd-grab-fw-stm32"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.5", features = ["stm32f103c8", "time-driver-any", "memory-x", "unstable-pac"] }
embassy-time = { version = "0.5" }
embassy-sync = { version = "0.8" }
embassy-futures = { version = "0.1" }
embedded-io = "0.7"
embedded-io-async = "0.7"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"

[profile.release]
debug = true
lto = "fat"
opt-level = "s"
codegen-units = 1
