[package]
name = "aq-lcd-grab-fw"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.10", features = ["rp235xa", "time-driver", "critical-section-impl", "binary-info"] }
embassy-time = { version = "0.5" }
embassy-usb-logger = { version = "0.6" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"
log = "0.4"

[profile.release]
debug = true
